src/test/ui/stdarch/is_x86_feature_detected-error.stderr
error: unknown x86 target feature: foobar
  --> $DIR/is_x86_feature_detected-error.rs:6:5
   |
LL |     is_x86_feature_detected!("foobar");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

